some word suggestions

--- a/acl-group-compliance.Rmd
+++ b/acl-group-compliance.Rmd
@@ -10,7 +10,7 @@ rmd_output_metadata:
 
 `r if(Sys.getenv('CONNECT_SERVER') == '') { "<h4>ERROR: You must set the CONNECT_SERVER environment variable</h4>\n" }` `r if(Sys.getenv('CONNECT_API_KEY') == '') { "<h4>ERROR: You must set the CONNECT_API_KEY environment variable</h4>\n" }` `r if(Sys.getenv('CONNECT_API_KEY') == '' || Sys.getenv('CONNECT_SERVER') == '') { knitr::knit_exit() }`
 
-Motivation: many organizations have groups of users organized by line of business, or some other group. As as result, there are times when you do not want users within those groups to see each other's content that they publish to RStudio Connect. Today there are two solutions for this scenario. One, you can manage a separate instance of Connect for each business unit likely using an RStudio Connect Enteprise license. Two, you can audit content that is published on RStudio Connect and receive an automated report warning you. This document will walk through the second solution and in particular shows you how to first detect, and then receive an alert if a user belonging to one business unit adds a user or batch of users from another business unit to their content Access Control List ("ACL").
+Motivation: many organizations have groups of users organized by line of business, or some other grouping. As as result, there are times when you do not want users within those groups to see each other's content that they publish to RStudio Connect. Today there are two solutions for this scenario. One, you can manage a separate instance of Connect for each business unit likely using an RStudio Connect Enteprise license. Two, you can audit content that is published on RStudio Connect and receive an automated report warning you. This document will walk through the second solution and in particular shows you how to first detect, and then receive an alert if a user belonging to one business unit adds a user or batch of users from another business unit to their content Access Control List ("ACL").
 
 Step 1: Decide how to configure **Most Permissive Access Type** restrictions for Publishers and Admins (globally) on the Server. This will determine whether all access levels are necessary to track in this report. Read more about 'Most Permissive Access Type' configuration options in the [Admin Guide](https://docs.rstudio.com/connect/admin/appendix/configuration/#Applications.MostPermissiveAccessType).
 
